@@ -23,6 +23,7 @@ import org.openehr.am.archetype.constraintmodel.CObject;
 import org.openehr.am.archetype.Archetype;
 import org.openehr.am.openehrprofile.datatypes.quantity.CDvOrdinal;
 import org.openehr.am.openehrprofile.datatypes.quantity.Ordinal;
+import org.openehr.rm.datatypes.text.CodePhrase;
 
 import java.util.*;
 
@@ -58,11 +59,30 @@ public class CDvOrdinalTest extends ParserTestBase {
     public void testCDvOrdinal() throws Exception {
         CObject node = archetype.node(
                 "/types[at0001]/items[at10001]/value");
-        assertTrue("CDvOrdinal expected", node instanceof CDvOrdinal);
-        CDvOrdinal cordinal = (CDvOrdinal) node;
         String[] codes = {
             "at0003.0", "at0003.1", "at0003.2", "at0003.3", "at0003.4"
         };
+        String terminology = "local";
+        assertCDvOrdinal(node, terminology, codes, null);
+    }
+    
+    public void testCDvOrdinalWithAssumedValue() throws Exception {
+        CObject node = archetype.node(
+                "/types[at0001]/items[at10002]/value");
+        String[] codes = {
+            "at0003.0", "at0003.1", "at0003.2", "at0003.3", "at0003.4"
+        };
+        String terminology = "local";
+        Ordinal assumed = new Ordinal(0, new CodePhrase(terminology, codes[0]));
+        assertCDvOrdinal(node, terminology, codes, assumed);
+    }
+    
+    private void assertCDvOrdinal(CObject node, String terminoloy,
+    		String[] codes,	Ordinal assumedValue) {
+    	
+    	assertTrue("CDvOrdinal expected", node instanceof CDvOrdinal);
+        CDvOrdinal cordinal = (CDvOrdinal) node;
+        
         List codeList = Arrays.asList(codes);
         Set<Ordinal> list = cordinal.getList();
         assertEquals("codes.size", codes.length, list.size());
@@ -72,6 +92,8 @@ public class CDvOrdinalTest extends ParserTestBase {
             assertTrue("code missing", 
             		codeList.contains(ordinal.getSymbol().getCodeString()));
         }
+        assertEquals("assumedValue wrong", assumedValue, 
+        		cordinal.getAssumedValue());
     }
 
     private Archetype archetype;
