@@ -1,3 +1,6 @@
+2007/01/24
+.added support for assumedValue parsing in CDvOrdinal
+
 2007/01/20
 .added overwritting occurrences for ArchetypeInternalRef
 .improved ArchetypeSlotTest
